# battery-telemetry-validation-harness

./: .gitignore  LICENSE  Makefile  README.md
.github/workflows/: ci.yml
cpp/: CMakeLists.txt
cpp/include/: validator.hpp
cpp/src/: main.cpp  validator.cpp
cpp/tests/: test_validator.cpp
cpp/tests/fixtures/: malformed_missing_column.csv  malformed_trailing_content.json  malformed_unicode_escape.json  malformed_unterminated_quote.csv
docs/: architecture.md
examples/: sample_telemetry.csv  sample_telemetry.json
python/: generate_telemetry.py  render_report_html.py  requirements.txt
python/tests/: test_generate_telemetry.py  test_malformed_input.py
